app/jslib/jqtouch/themes/apple/theme.css
/* ... */
#jqt ul.message .paragraph, #jqt ul.detail .paragraph {
    display: block;
    /* display: -webkit-box; */
    position: relative;
    font-weight: normal;
    font-size: 13px;
    -webkit-box-flex: 10; -moz-box-flex: 10; box-flex: 10;
    top: 0; bottom: 0;
    background-color: lightgrey;
}

#jqt ul.message li.title .span {
}

/* @end */



/* @group Mini Label */

#jqt ul li small {
    color: #369;
    font: 17px "Helvetica Neue", Helvetica;
    text-align: right;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    display: block;
    width: 23%;
    padding: 3px 0px;
}

#jqt ul li.arrow small {
    padding: 0 15px;
}

#jqt ul li small.counter {
    position: relative;
    font-size: 17px !important;
    line-height: 13px !important;
    font-weight: bold;
    background-color: rgb(154,159,170);
    color: #fff;
    -webkit-border-radius: 11px; -moz-border-radius: 11px; border-radius: 11px;
    padding: 5px 10px 5px 10px;
    width: auto;
    top: 0px;
}

#jqt ul li.arrow small.counter {
    margin-right: 0px;
}

/* @end */



/* @group Metal */

#jqt ul.metal li {
    border-top: 1px solid rgb(238,238,238);
    border-bottom: 1px solid rgb(156,158,165);
    font-size: 26px;
    text-shadow: #fff 0 1px 0;
    background-image: none, -webkit-gradient(linear, 0% 0%, 0% 100%, from(#dadadc), to(#b4b3b8));
    background-position: right center, left top;
    background-repeat: no-repeat;
    padding: 10px;
}

#jqt ul.metal li a {
    line-height: 26px;
    margin: 0;
    padding: 23px 10px;
    margin: -10px -10px;
}

#jqt ul.metal li a em {
    display: block;
    font-size: 14px;
    font-style: normal;
    color: #444;
    width: 50%;
    line-height: 14px;
}

#jqt ul.metal li.active a em {
    color: inherit;
}

#jqt ul.metal li small {
    float: right;
    right: 25px;
    color: inherit;
    position: relative;
    margin-top: 10px;
    font-weight: bold;
}

#jqt ul.metal li.arrow a small {
    padding-right: 0;
    line-height: 17px;
}

#jqt ul.metal li.arrow {
    background-image: url(img/chevron.png), -webkit-gradient(linear, 0% 0%, 0% 100%, from(#dadadc), to(#b4b3b8));
    background-position: right center, left top;
    background-repeat: no-repeat;
}

#jqt ul.plastic {
    -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0;
    margin: 0;
    padding: 0;
    border-left: 0;
    border-right: 0;
    border-top: 0;
    background-color: rgb(173,173,173);
}

#jqt ul.plastic li {
    display: block;
    -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0;
    border-top: 1px solid rgb(191,191,191);
    border-bottom: 1px solid rgb(157,157,157);
}

#jqt ul.detail li {
    display: block;
    position: relative;
    border-top: 0;
}

#jqt ul.detail li.header {
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(127, 127, 127, 0.75)), to(rgba(127, 127, 127, 0)))
}

#jqt ul.detail li.description {
    text-shadow: none;
    font-size: 14px;
    font-weight: normal;
    text-align: justify;
}

#jqt ul.detail li.description pre {
    font: 14px "Helvetica Neue", Helvetica;
    white-space: pre-line;
    white-space: -moz-pre-wrap; white-space: -pre-wrap; white-space: -o-pre-wrap;
    word-wrap: break-word;
    text-align: justify;
}

#jqt ul.plastic li > .icon, #jqt ul.plastic li > a:only-of-type .icon,
#jqt ul.detail li > .icon, #jqt ul.detail li > a:only-of-type .icon {
    display: inline-block;
    width: 49px;
    height: 49px;
    margin-right: 10px;
    vertical-align: -38%;
}

#jqt ul.detail li .icon, #jqt ul.detail li > a:only-of-type .icon {
    vertical-align: -70%;
}

#jqt ul.plastic li:nth-child(odd):not(.active) {
    background-color: rgb(152,152,152);
    border-top: 1px solid rgb(181,181,181);
    border-bottom: 1px solid rgb(138,138,138);
}

#jqt ul.plastic + p {
    font-size: 11px;
    color: #2f3237;
    text-shadow: none;
    padding: 10px 10px;
}

#jqt ul.plastic p strong {
    font-size: 14px;
    line-height: 18px;
    text-shadow: #fff 0 1px 0;
}

#jqt ul.plastic li a, #jqt ul.detail li {
    text-shadow: rgb(211,211,211) 0 1px 0;
}

#jqt ul.detail li.header {
    line-height: 36px;
}

#jqt ul.plastic li:nth-child(odd) a, #jqt ul.detail li:nth-child(odd) {
    text-shadow: rgb(191,191,191) 0 1px 0;
}

#jqt ul.plastic li small, #jqt ul.detail li small {
    color: #3C3C3C;
    text-shadow: rgb(211,211,211) 0 1px 0;
    font-size: 13px;
    font-weight: bold;
    /* text-transform: uppercase; */
    line-height: 24px;
}

#jqt ul.plastic li small.super, #jqt ul.plastic li small.sub,
#jqt ul.detail li small.super, #jqt ul.detail li small.sub, #jqt ul.detail li small.middle,
#jqt ul.detail li .button.end {
    display: inline-block;
    position: absolute;
    width: auto;
    font-size: 11px;
    padding: 0px 15px;
    color: #444;
}

#jqt ul.plastic li small.sub {
    font-size: 9.5px;
}

#jqt ul.detail li small.sub {
    font-size: 9px;
    text-shadow: none;
}

#jqt ul.plastic li small.super {
    top: 4px; left: 59px;
}

#jqt ul.plastic li small.sub {
    bottom: 3px; left: 59px;
}

#jqt ul.detail li small.middle {
    top: 30px; left: 59px;
}

#jqt ul.detail li small.sub {
    bottom: 4px; left: 59px;
}

#jqt ul.detail li .button.end {
    top: 14px; right: 10px;
    color: white;
    font-size: 12px;
    padding: 0px 3px;
    margin: 0px 5px;
    -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;
}

#jqt ul.plastic.minibanner, #jqt ul.plastic.bigbanner {
    margin: 10px;
    border: 0;
    height: 81px;
    clear: both;
}

#jqt ul.plastic.bigbanner {
    height: 140px !important;
}

#jqt ul.plastic.minibanner li {
    border: 1px solid rgb(138,138,138);
    background-color: rgb(152,152,152);
    width: 145px;
    height: 81px;
    float: left;
    -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
    padding: 0;
}
/* ... */

